# metric-learning

./: .gitignore  .pre-commit-config.yaml  README.md  README_ru.md  pyproject.toml  requirements.txt  requirements_optional.txt  train_bert.py  train_vit.py
configs/: train_bert.yaml  train_vit.yaml
examples/: README.md  README_ru.md  bert_converter.py  bert_to_onnx.py  build_vit_dataset.py  quantize.py  remove_duplicates.py  vit_converter.py  vit_to_onnx.py
src/metric_learning/: const.py  dataset.py  lightning.py  model.py
src/metric_learning/utils/: dataframe_format.py
